# gtsfm

./: .env.example  .gitignore  .gitmodules  2024_01_26_18_21_20_312296_aggregated_results_table.tsv  2024_01_29_01_40_27_339956_aggregated_results_table.tsv  2024_04_16_15_23_29_545171_aggregated_results_table.tsv  2024_04_18_18_10_46_790577_aggregated_results_table.tsv  2024_04_20_15_47_13_477451_aggregated_results_table.tsv  =0.13.0  =0.20.0  =4.2  =4.5.4.60  CLUSTER.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  analyze_ransac_iters.py  benchmark_wildcat.sh  build_binary_files.sh  collect_env.py  commands.txt  conda-setup.md  cookies.txt  correspondence-generator-dask-report.html  create_tracks_viz.sh  creta_bata.py  dask-report.html  download_model_weights.sh  dummy_data.mat  environment.yml  environment_cluster.yml  environment_linux.yml  environment_linux_PACE.yml  environment_linux_cpuonly.yml  environment_m3_ultra.yml  environment_mac.yml  environment_v2_linux_cpuonly.yml  format_fix.sh  gtsfm.py  (+24 more)
.github/: copilot-instruction.md  dependabot.yml
.github/scripts/: download_all_benchmarks.sh  download_single_benchmark.sh  execute_single_benchmark.sh  execute_single_benchmark_self_hosted.sh  execute_single_benchmark_wildcat.sh  install_dependencies.sh  python.sh  run_eval.sh  run_unit_tests.sh  setup.sh  utils.sh
.github/workflows/: benchmark-self-hosted.yml  benchmark-wildcat.yml  benchmark.yml  benchmark_deep_frontend.yml  benchmark_sift_frontend.yml  build-wheels.yml  ci.yml  setup-cache.yml  test-python.yml  test-reproducibility.yml
assets/: CORRESPONDENCE_GENERATOR.md  IMAGE_PAIRS_GENERATOR.md  LOADER.md  MULTIVIEW_OPTIMIZER.md  README.md  TWO_VIEW_ESTIMATOR.md
assets/camera_details/: sensor_database.csv  sensor_database_detailed.csv
averaging/: rotation_averaging.py
averaging/rotation/: dummy_rotation_averaging.py  rotation_averaging_base.py  shonan.py
averaging/translation/: averaging_1dsfm.py  dummy_translation_averaging.py  translation_averaging_base.py
bundle/: bundle_adjustment.py  bundle_adjustment_base.py
colab/: install_dependencies.sh  plot.py
common/: image.py  keypoints.py  sfm_result.py  sfmresult.py  tracks.py
config/: config1.yaml  config2.yaml  default.py  default.yaml  defaults.py  defaults.yaml  gtsfm_cfgnode.py  gtsfm_cfgnode_from_modules.py  gtsfm_cfgnode_from_single_file.py  gtsfm_default.py  gtsfm_default.yaml  gtsfm_defaults.py
config/modules/: featureExtractor.yaml  multiViewOptimizer.yaml  sceneOptimizer.yaml  twoViewEstimator.yaml
data_association/: da_interface.py  data_assoc.py  data_assoc_ransac.py  data_assoc_v1.py  dummy_da.py  feature_tracks.py  point3d_initializer.py  tracks.py  triangulation_ransac.py
densify/: metrics.py  unit_tests_avg_reprojectionerror.py
docs/: CONTRIBUTING.md
docs/setup/: conda-setup.md  uv-setup.md
evaluation/: README.md  eval_hilti.py
frontend/: README.md  frontend.py  frontend_base.py  frontend_result.py  post_processing.py
frontend/descriptor/: descriptor_base.py  dummy_descriptor.py  rootsift.py  sift.py
frontend/detector/: detector_base.py  detector_from_joint_detector_descriptor.py  dog.py  dummy_detector.py  fast.py
frontend/detector_descriptor/: combination_detector_descriptor.py  sift.py  (+2 more)
gtsfm/: cluster_merging.py  cluster_optimizer.py  config.yaml  dir_testing.py  feature_extractor.py  intrinsics_estimator.py  logtest.py  multi_view_optimizer.py  new_detector.py  old_detector.py  run_scene_optimizer.py  runner.py  scene_optimizer.py  test_anysplat.py  theia_multi_view_optimizer.py  theia_two_view_estimator.py  three_view_estimator.py  two_view_estimator.py  two_view_estimator_cacher.py
loader/: folder_loader.py  loader_base.py  lund_dataset_loader.py  yfcc_loader.py
logs/: log.txt
nonfree/: LICENSE  README.md
notebooks/: clustering.ipynb  downsampling_scene_tree.ipynb  edge_quality_analysis.ipynb  explore_hilti.ipynb  gtsfm_colab.ipynb  gtsfm_door_demo.ipynb  merging_palace.ipynb  partitioning.ipynb  reorder_colmap.ipynb  two_view_estimation.ipynb
openmvg_sfmdata/: cameras.txt  images.txt  points3D.txt
pipeline/: run_pipeline.sh
processed-data-dir/: .transforms.json.swp  transforms.json
result_metrics/: data_association_metrics.json  frontend_full.json  frontend_summary.json  multiview_optimizer_metrics.json
results/: ba_input.bal  ba_output.bal
rtf_vis_tool/: .eslintcache  README.md  config-overrides.js  input_3d_points.txt  package-lock.json  package.json
scripts/: README_DASK_LOCAL_REMOTE.md  anysplat_extrinsic_confirmation.py  benchmark_wildcat.sh  collect_results.py  compare.sh  compare_factor_graphs.py  compare_visibility_graphs.py  demo_vggt.py  demo_vggt_w_partition.py  download_model_weights.sh  eth3d_benchmark.sh  eth3d_benchmark_vggt.sh  inspect_track.py  local_scheduler_db_remote_worker_demo.py  mip360_benchmark_vggt.sh  plot_metrics.py  prepare_nerfstudio.py  probe_vggt.py  run_ba.py  run_ba_from_gt.py  run_ba_from_gt_new.py  run_ba_new.py  run_gtsfm_slurm.py  tanks_and_temples_benchmark.sh  test_local_scheduler_db_remote_worker_config.py  test_two_view_estimator_dask_postgres.py  two_view_estimator_dask_postgres.py  visu3d_pose_viewer.ipynb  visualize_cluster_tree.py  visualize_tracks_web.py
tests/: test_binary_tree_partition.py  test_graph_partitioner.py  test_gt_sfm.py  test_gtsfm.py  test_gtsfm_runner_olssonloader.py  test_local_scheduler_db_remote_worker_config.py  test_multi_view_optimizer.py  test_point_transfer.py  test_scene_optimizer.py  test_scene_optimizer_no_gt.py  test_serialization_bug_realistic.py  test_three_view_estimator.py  test_two_view_estimator.py  test_two_view_estimator_cacher.py  test_two_view_estimator_dask_postgres.py
utils/: cfgnode.py  feature_utils.py  features.py  geometry_comparisons.py  image_utils.py  images.py  io.py  sensor_width_database.py  serialization.py  verification.py  viz.py
visualization/: app.py  conda_config.txt  environment.yml  local_dask_pointcloud.py  mayavi_vis_utils.py  open3d_vis_utils.py  pointcloud_visualizer.py  requirements.txt  view_scene.py  viz
(+989 files in other folders)
